<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.earthquakemonitor.MainAct" >

    <TextView
        android:id="@+id/sumaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/act_main_summary_label" />
    
    <TextView
        android:id="@+id/generatedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sumaryTextView"
        android:textSize="13sp"
        android:text="@string/O" />

    <ImageButton
        android:id="@+id/sumMapBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/sumaryTextView"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/act_main_map_sum_btn"
        android:scaleType="centerCrop"
        android:background="@drawable/map_sum"
        android:onClick="sumMapBtnOnClick" />

    <ImageButton
        android:id="@+id/refreshBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/sumaryTextView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:background="@drawable/ic_action_refresh"
        android:contentDescription="@string/act_main_refresh_btn"
        android:scaleType="centerCrop"
        android:onClick="refreshBtnOnClick" />

    <ListView
        android:id="@+id/quakeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sumaryTextView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/sumMapBtn" >
    </ListView>

</RelativeLayout>