<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/O"
            android:src="@drawable/earthquake"
            android:alpha="0.3" />

        <TextView
            android:id="@+id/detailTitleLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="22sp"
            android:textColor="#00003D"
            android:text="@string/act_detail_title_lbl" />

        <TextView
            android:id="@+id/placeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/detailTitleLbl"
			android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/act_detail_place_lbl" />

        <TextView
            android:id="@+id/placeVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/detailTitleLbl"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/magLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/placeVl"
            android:textSize="15sp"
            android:text="@string/act_detail_mag_lbl" />

        <TextView
            android:id="@+id/magVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/placeVl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/alertLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/magLbl"
            android:textSize="15sp"
            android:text="@string/act_detail_alert_lbl" />

        <TextView
            android:id="@+id/alertVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/magLbl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/timeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/alertLbl"
            android:textSize="15sp"
            android:text="@string/act_detail_time_lbl" />

        <TextView
            android:id="@+id/timeVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/alertLbl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/depthLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/timeVl"
            android:textSize="15sp"
            android:text="@string/act_detail_depth_lbl" />

        <TextView
            android:id="@+id/depthVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/timeVl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/updateLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/depthLbl"
            android:textSize="15sp"
            android:text="@string/act_detail_updated_lbl" />

        <TextView
            android:id="@+id/updateVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/depthLbl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />

        <TextView
            android:id="@+id/feltLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
			android:layout_below="@+id/updateVl"
            android:textSize="15sp"
            android:text="@string/act_detail_felt_reports_lbl" />

        <TextView
            android:id="@+id/feltVl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/magLbl"
			android:layout_below="@+id/updateVl"
			android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/O" />
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:background="#aaaaaa"
        android:padding="5dp"
        android:layout_margin="10dp" >
        
	    <fragment
	        android:id="@+id/mapFragment"
	        android:name="com.google.android.gms.maps.SupportMapFragment"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" />
	</RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >
        
		<Button
            android:id="@+id/centerPinButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/find_pin_btn"
            android:onClick="centerPinBtnOnClick"
            android:contentDescription="@string/act_map_summary_find_pin_btn" />

        <ToggleButton
            android:id="@+id/showStreetWorldToggleButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:layout_centerVertical="true"
            android:background="@drawable/toggle_map_btn"
            android:onClick="showStreetWorldToggleBtnOnClick"
            android:clickable="true"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>
</LinearLayout>